I wanted to see if I could write a calendar view and then number the days with a jquery JSON request.

--- a/app/stylesheets/kallisto.sass
+++ b/app/stylesheets/kallisto.sass
@@ -73,3 +73,24 @@ input[type='submit']:hover
   
 .logline:hover
   :background-color white
+
+table, th, td
+  :border 1pt solid #6499b6
+  :border-collapse collapse
+  :width 100%
+  :table-layout fixed
+  
+th
+  :color #6499b6
+  :height 30px
+  :text-align center
+
+td
+  :height 30px
+  :text-align left
+  
+.dow
+  :font 10px arial,sans-serif
+  :margin 2px
+  :position relative
+  :top -9px
